# spectrum-analyzer

./: LICENSE  README.md
.github/workflows/: ghpage.yaml
3dmodels/: back-enclosure-Body.stl  back-enclosure.FCStd  front-enclosure.FCStd  spectrum-analyzer.FCStd  spectrum-analyzer.FCStd1
assets/: spectrum_analyzer_controller.step  spectrum_analyzer_display.step
electronics/: .gitignore  parts_list.md
electronics/spectrum_analyzer/: spectrum_analyzer.kicad_pro  spectrum_analyzer.kicad_sch
electronics/spectrum_analyzer/spectrum_analyzer_controller/: spectrum_analyzer_controller.kicad_pcb  spectrum_analyzer_controller.kicad_pro  spectrum_analyzer_controller.kicad_sch  spectrum_analyzer_controller.step
electronics/spectrum_analyzer/spectrum_analyzer_display/: spectrum_analyzer_display.kicad_pcb  spectrum_analyzer_display.kicad_pro  spectrum_analyzer_display.kicad_sch
electronics/spectrum_analyzer_controller/: spectrum_analyzer_controller.kicad_pcb  spectrum_analyzer_controller.kicad_pro  spectrum_analyzer_controller.kicad_sch
electronics/spectrum_analyzer_display/: spectrum_analyzer_display.kicad_pcb  spectrum_analyzer_display.kicad_pro  ~spectrum_analyzer_display.kicad_sch.lck
firmware/: .gitignore  firmware.ino
firmware/spectrum-analyzer/: Cargo.toml  write.sh
firmware/spectrum-analyzer/.cargo/: config.toml
firmware/spectrum-analyzer/avr-specs/: avr-attiny84.json
firmware/spectrum-analyzer/src/: delay.rs  led_matrix.rs  lib.rs  main.rs
tools/led-matrix-generator/: index.html  package-lock.json  package.json  vite.config.ts
(+8 files in other folders)
