[package]
name = "spectrum-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spectrum-analyzer"
test = false
bench = false

[dependencies]
avr-device = "0.5.2"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"

[dependencies.attiny-hal]
git = "https://github.com/rahix/avr-hal"
features = ["attiny84", "rt"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
